--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
       </section>
 
       <!-- Menu Section -->
-      <!------ Section: Features ------>
+      <!------ Section: Features 1 ------>
       <section class="feutures" id="layanan">
         <h2 class="section_title">Layanan Kami</h2> 
         <div class="row">
@@ -96,7 +96,7 @@
               </div>
               <h3>Terpercaya</h3>
               <p>
-                kami menjamin pakaian anda tidak akan hilang
+                kami menjamin hasil yang terbaik
               </p>
             </div>
           </div>
@@ -114,6 +114,53 @@
           </div>
         </div>
       </section>
+
+      <!------ Section: Features 2 ------>
+
+      <section class="feutures2" id="layanan">
+        <h2 class="section_title">Jam Operasional & Harga</h2> 
+        <div class="row2">
+          <!-- Column One -->
+          <div class="column2">
+            <div class="card2">
+              <div class="icon2">
+                <i class="fa-solid fa-clock"></i>
+              </div>
+              <h3>Jam Buka</h3>
+              <p>
+                09.00 
+              </p>
+            </div>
+          </div>
+          <!-- Column Two -->
+          <div class="column2">
+            <div class="card2">
+              <div class="icon2">
+                <i class="fa-solid fa-clock"></i>
+              </div>
+              <h3>Jam Tutup</h3>
+              <p>
+                18.00 
+              </p>
+            </div>
+          </div>
+          <!-- Column Three -->
+          <div class="column2">
+            <div class="card2">
+              <div class="icon2">
+                <i class="fa-solid fa-dollar-sign"></i>
+              </div>
+              <h3>Harga</h3>
+              <p>
+                Rp. 7000/KG
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- features section -->
+
 
     </main>
 <main>
